<?xml version="1.0"?>
<package format="2">
  <name>rqt_embed_window_example</name>
  <version>0.0.1</version>
  <description>Example of embedding RViz and Plotjuggler into custom GUI with rqt_embed_window</description>

  <maintainer email="tobit.flatscher@outlook.com">Tobit Flatscher</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rqt_gui</build_depend>
  <build_depend>rqt_gui_py</build_depend>
  <build_depend>plotjuggler</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>rqt_gui</build_export_depend>
  <build_export_depend>rqt_gui_py</build_export_depend>
  <build_export_depend>plotjuggler</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>
  <exec_depend>plotjuggler</exec_depend>
  
  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
